--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,16 +3,25 @@ body {
   margin: 0 auto;
 }
 
+a {
+  text-decoration: none;
+}
+
 header {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1.5fr 2fr;
   margin-top: 20px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
+  margin-left: 30px;
 }
 
 header figure {
   display: grid;
-  grid-template-columns: 75px 85%;
+  grid-template-columns: 1fr 3fr;
+}
+
+header.header figure img {
+  margin: 0 25px;
 }
 
 header figure figcaption {
@@ -22,13 +31,15 @@ header figure figcaption {
   padding: 10px;
   font-size: 20px;
   line-height: 27px;
+  text-align: center;
+  max-width: 250px;
 }
 
 header nav {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   align-items: center;
-  margin-left: 30%;
+  margin: 0 40px 0 25px;
 }
 
 header nav a {
@@ -40,4 +51,90 @@ header nav a {
 
 header nav a.active {
   font-weight: bold;
+}
+
+section#main {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+/* section#main div.heart {
+  background: url(/assets/images/Healthy-Eating.jpg) no-repeat fixed;
+} */
+
+section#main div.heart img {
+  width: 620px;
+}
+
+section#main div.description {
+  display: grid;
+  grid-template-rows: 350px 100px 100px;
+  margin-right: 60px;
+  font-family: Playfair Display;
+}
+
+
+section#main div.description-heading {
+  display: grid;
+  grid-template-rows: 100px 300px;
+  border: 2px solid black;
+  width: 530px;
+  height: 250px;
+  margin-top: 100px;
+}
+
+section#main div.description div.description-heading h2 {
+  font-size: 48px;
+  margin-bottom: 20px;
+  text-align: center;
+  letter-spacing: 0.21em;
+}
+
+section#main div.description-heading p {
+  margin: 10px 30px 20px 20px;
+  height: 100px;
+  font-size: 18px;
+  letter-spacing: 0.135em;
+  line-height: 180.5%;
+}
+
+section#main div a figure {
+  display: grid;
+  grid-template-columns: 172px 40px;
+  border: 2px solid black;
+  margin: 0;
+  margin-top: 3px;
+  width: 250px;
+  height: 55px;
+  font-size: 24px;
+  line-height: 32px;
+  color: black;
+  text-align: center;
+  transition: all .3s;
+}
+
+section#main div a figure figcaption {
+  margin: 10px;
+}
+
+section#main div a figure img {
+  place-self: center;
+}
+
+section#main div a figure:hover {
+  background-color: black;
+  color: white
+}
+
+section#main div a figure:hover img {
+  filter: invert(100%);
+}
+
+section#main div.description div.citate {
+  font-style: italic;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 150%;
+  text-align: center;
+  letter-spacing: 0.1em;
 }
